Better alignment about us - correction output reinit

--- a/flexbox/9-styles.css
+++ b/flexbox/9-styles.css
@@ -569,7 +569,7 @@ ul.row {
 /* Section ABOUT US
           =============================*/
 
-.section-about-us .col- {
+.section-about-us [class*="col-"] {
     align-self: center;
 }
 
